2006-04-01  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (Introduction): Swap paragraphs.

2006-04-01  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (gettext grok, Temp Programmers, Trans Intro 0,
	Trans Intro 1, Discussions, Organization, Information Flow,
	References): Mark as outdated.

2006-04-01  Bruno Haible  <bruno@clisp.org>

	* xgettext.texi (--keyword): Document the default keywords.
	Suggested by Bjoern Voigt <bjoern@cs.tu-berlin.de>.

2006-03-28  Bruno Haible  <bruno@clisp.org>

	* msgfilter.texi: Explain built-in filters and recode-sr-latin.

2006-03-26  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (Java): Recommend a simpler idiom for Java 1.5.

2006-03-25  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (C): Also mention the hello-c++-wxwidgets example.

2006-03-19  Bruno Haible  <bruno@clisp.org>

	* xgettext.texi (--keyword): Document the extracted comments syntax.

2006-03-16  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (PO Files): Clarify the terms "automatic comments" and
	"extracted comments".
	* msggrep.texi: Document the -X/--extracted-comment option.

2006-03-16  Bruno Haible  <bruno@clisp.org>

	* xgettext.texi (--keyword): Document suffix 'g'.

2006-02-26  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (Introduction): Fix typo.
	Reported by <atras-ch@mail.msiu.ru>.

2006-02-12  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (PO Files): Mention boost-format.
	(boost-format): New subsection.
	* xgettext.texi: Document --boost option.

2005-11-29  Colin Watson  <cjwatson@ubuntu.com>

	* msggrep.texi: Document --invert-match option.

2005-10-18  Bruno Haible  <bruno@clisp.org>

	* xgettext.texi (--keyword): Document how to specify the total number
	of arguments.

2005-10-03  Bruno Haible  <bruno@clisp.org>

	Add support for contexts in xgettext.
	* xgettext.texi (--keyword): Document how to specify context arguments.

2005-10-07  Bruno Haible  <bruno@clisp.org>
